linktree final adjustment with owais

--- a/index.html
+++ b/index.html
@@ -1,103 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Indus Real Estate LLC</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="container">
-        <!-- Logo Section -->
-        <div class="logo-section">
-            <div class="logo-circle">I</div>
-            <div class="company-name">Indus Real Estate LLC</div>
-            <div class="company-handle">@indusrealestatello</div>
+      <!-- Logo Section -->
+      <div class="logo-section">
+        <div class="logo-circle">
+          <img
+            src="images/indus-real-estate.jpeg"
+            alt="Indus Real Estate LLC"
+            class="company-logo"
+          />
         </div>
+        <div class="company-name">Indus Real Estate LLC</div>
+        <div class="company-handle">@indusrealestatellc</div>
+      </div>
 
-        <!-- Content Section -->
-        <div class="content-section">
-            <div class="text-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div class="social-links">
-                <a href="https://instagram.com/indusrealestatello" class="social-link instagram" target="_blank">
-                    <i class="fab fa-instagram"></i> Instagram
-                </a>
-                <a href="https://facebook.com/indusrealestatello" class="social-link facebook" target="_blank">
-                    <i class="fab fa-facebook"></i> Facebook
-                </a>
-                <a href="https://youtube.com/indusrealestatello" class="social-link youtube" target="_blank">
-                    <i class="fab fa-youtube"></i> YouTube
-                </a>
-                <a href="https://indusrealestate.com" class="social-link website" target="_blank">
-                    <i class="fas fa-globe"></i> Website
-                </a>
-            </div>
-        </div>
-
-        <!-- Contact Section -->
-        <div class="contact-section">
-            <div class="contact-button call-now">Call Now</div>
-            <div class="contact-button whatsapp-now">WhatsApp Now</div>
-        </div>
-
-        <!-- Investment Guide Section -->
-        <div class="guide-section" onclick="downloadFile('dubai-real-estate-guide.pdf')">
-            <div class="guide-title">INDUS</div>
-            <div class="guide-subtitle">Why You Should Invest in Dubai Real Estate</div>
-        </div>
-
-        <!-- Rental Market Section -->
-        <div class="guide-section" onclick="downloadFile('dubai-rental-market-guide.pdf')">
-            <div class="guide-title">INDUS</div>
-            <div class="guide-subtitle">DURAL RENTAL MARKET</div>
-        </div>
-
-        <!-- Video Section -->
-        <div class="video-section">
-            <div class="video-thumbnail" onclick="openVideo('https://www.youtube.com/embed/VIDEO_ID_1')">
-                <img src="images/video1-thumbnail.jpg" alt="Dubai Property Investment Tips">
-                <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
-            </div>
-            <div class="video-thumbnail" onclick="openVideo('https://www.youtube.com/embed/VIDEO_ID_2')">
-                <img src="images/video2-thumbnail.jpg" alt="Top Areas to Rent in Dubai">
-                <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
-            </div>
-        </div>
-
-        <!-- Hiring Section - LinkedIn Post -->
-        <div class="hiring-section" onclick="openLinkedInPost()">
-            <img src="images/linkedin-post.jpg" alt="We're Hiring - Indus Real Estate" class="linkedin-post">
-            <div class="hiring-overlay">
-                <div class="hiring-title">WE'RE HIRING</div>
-                <div class="hiring-subtitle">Click to view our LinkedIn post</div>
-            </div>
-        </div>
-
-        <!-- Download Guide Section -->
-        <div class="download-section">
-            <div class="guide-title">Download Dubai Investment Guide</div>
-            <div class="download-button" onclick="downloadFile('dubai-real-estate-guide.pdf')">Download Now</div>
-        </div>
-
-        <!-- Additional Text Section -->
+      <!-- Content Section -->
+      <div class="content-section">
         <div class="text-content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.
+          </p>
+          <p>
+            Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
+          </p>
         </div>
+        <div class="social-links">
+          <a
+            href="https://indusre.com"
+            class="social-link website"
+            target="_blank"
+          >
+            <i class="fas fa-globe"></i>
+            <span class="social-text">Website</span>
+          </a>
+          <a
+            href="https://www.instagram.com/indusredubai/?hl=en"
+            class="social-link instagram"
+            target="_blank"
+          >
+            <i class="fab fa-instagram"></i>
+            <span class="social-text">Instagram</span>
+          </a>
+          <a
+            href="https://www.facebook.com/p/Indus-Real-Estate-LLC-100083310042155/"
+            class="social-link facebook"
+            target="_blank"
+          >
+            <i class="fab fa-facebook"></i>
+            <span class="social-text">Facebook</span>
+          </a>
+          <a
+            href="https://www.youtube.com/c/IndusRealEstateLLC"
+            class="social-link youtube"
+            target="_blank"
+          >
+            <i class="fab fa-youtube"></i>
+            <span class="social-text">YouTube</span>
+          </a>
+        </div>
+      </div>
+
+      <!-- Contact Section -->
+      <div class="contact-section">
+        <div class="contact-button call-now" onclick="callCompany()">
+          <div class="contact-icon">
+            <i class="fas fa-phone-alt"></i>
+          </div>
+          <div class="contact-info">
+            <div class="contact-title">Call Now</div>
+          </div>
+        </div>
+        <div class="contact-button whatsapp-now" onclick="whatsappCompany()">
+          <div class="contact-icon">
+            <i class="fab fa-whatsapp"></i>
+          </div>
+          <div class="contact-info">
+            <div class="contact-title">WhatsApp Now</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Video Section -->
+      <div class="video-section">
+        <div
+          class="video-thumbnail"
+          onclick="openVideo('https://www.youtube.com/embed/UBMeUsiiFOo')"
+        >
+          <img
+            src="https://img.youtube.com/vi/UBMeUsiiFOo/maxresdefault.jpg"
+            alt="Dubai Property Investment Tips"
+            onerror="this.src='images/video1-thumbnail.jpg'"
+          />
+          <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
+        </div>
+        <div
+          class="video-thumbnail"
+          onclick="openVideo('https://www.youtube.com/embed/8jL69r-QBX8')"
+        >
+          <img
+            src="https://img.youtube.com/vi/8jL69r-QBX8/maxresdefault.jpg"
+            alt="Top Areas to Rent in Dubai"
+            onerror="this.src='images/video2-thumbnail.jpg'"
+          />
+          <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
+        </div>
+      </div>
+
+      <!-- Hiring Section - LinkedIn Post -->
+      <div class="hiring-section" onclick="openLinkedInPost()">
+        <div class="linkedin-container">
+          <img
+            src="images/linkedin_post.jpeg"
+            alt="We're Hiring - Indus Real Estate"
+            class="linkedin-post"
+          />
+          <div class="linkedin-logo">
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="hiring-overlay">
+          <div class="hiring-subtitle">Click to view our LinkedIn post</div>
+        </div>
+      </div>
+
+      <!-- Additional Text Section -->
+      <div class="text-content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+        <p>
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est
+          laborum.
+        </p>
+      </div>
     </div>
 
     <!-- Video Modal -->
     <div id="videoModal" class="video-modal">
-        <div class="modal-content">
-            <span class="close-modal" onclick="closeVideo()">&times;</span>
-            <iframe id="videoFrame" width="100%" height="450" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+      <div class="modal-content">
+        <span class="close-modal" onclick="closeVideo()">&times;</span>
+        <iframe
+          id="videoFrame"
+          width="100%"
+          height="450"
+          src=""
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
     </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
