--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="contact-section">
         <div class="contact-button call-now" onclick="callCompany()">
           <div class="contact-icon">
-            <i class="fas fa-phone-alt"></i>
+            <i class="fas fa-phone"></i>
           </div>
           <div class="contact-info">
             <div class="contact-title">Call Now</div>
