responsive design changes and minor changes

--- a/index.html
+++ b/index.html
@@ -22,27 +22,29 @@
           />
         </div>
         <div class="company-name">Indus Real Estate LLC</div>
-        <div class="company-handle">@indusrealestatellc</div>
+        <div class="company-handle">@indusrealestate</div>
       </div>
 
       <!-- Content Section -->
       <div class="content-section">
         <div class="text-content">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Indus Real Estate LLC Celebrating over two decades of excellence,
+            Indus Real Estate LLC stands as a trusted name in Dubai’s dynamic
+            property market. With a legacy spanning 21 years and over 160
+            prestigious awards, we continue to redefine standards in real estate
+            consultancy, brokerage, and investment services.
           </p>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-            cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            Driven by integrity, innovation, and an unwavering commitment to
+            client success, we offer tailored solutions that transform
+            aspirations into reality. From luxury residences to lucrative
+            investments, our expertise ensures every client experiences seamless
+            service and exceptional results.
           </p>
           <p>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat.
+            Indus Real Estate LLC — where excellence meets experience, and every
+            success story begins with trust.
           </p>
         </div>
         <div class="social-links">
@@ -116,10 +118,33 @@
         </div>
         <div
           class="video-thumbnail"
-          onclick="openVideo('https://www.youtube.com/embed/8jL69r-QBX8')"
+          onclick="openVideo('https://www.youtube.com/embed/bZgBYeabukA')"
         >
           <img
-            src="https://img.youtube.com/vi/8jL69r-QBX8/maxresdefault.jpg"
+            src="https://img.youtube.com/vi/bZgBYeabukA/maxresdefault.jpg"
+            alt="Top Areas to Rent in Dubai"
+            onerror="this.src='images/video2-thumbnail.jpg'"
+          />
+          <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
+        </div>
+
+        <div
+          class="video-thumbnail"
+          onclick="openVideo('https://www.youtube.com/embed/MHuNvJv43I4')"
+        >
+          <img
+            src="https://img.youtube.com/vi/MHuNvJv43I4/maxresdefault.jpg"
+            alt="Top Areas to Rent in Dubai"
+            onerror="this.src='images/video2-thumbnail.jpg'"
+          />
+          <div class="video-play-icon"><i class="fas fa-play-circle"></i></div>
+        </div>
+        <div
+          class="video-thumbnail"
+          onclick="openVideo('https://www.youtube.com/embed/ZCOHjZ-ODIw')"
+        >
+          <img
+            src="https://img.youtube.com/vi/ZCOHjZ-ODIw/maxresdefault.jpg"
             alt="Top Areas to Rent in Dubai"
             onerror="this.src='images/video2-thumbnail.jpg'"
           />
@@ -145,7 +170,7 @@
       </div>
 
       <!-- Additional Text Section -->
-      <div class="text-content">
+      <!-- <div class="text-content">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -158,7 +183,7 @@
           proident, sunt in culpa qui officia deserunt mollit anim id est
           laborum.
         </p>
-      </div>
+      </div> -->
     </div>
 
     <!-- Video Modal -->
@@ -176,7 +201,11 @@
         ></iframe>
       </div>
     </div>
-
+    <div class="copyright-section">
+      <div class="copyright-text">
+        &copy; 2025 Indus Real Estate LLC. All rights reserved.
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
