--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       <div class="content-section">
         <div class="text-content">
           <p>
-            Indus Real Estate LLC Celebrating over two decades of excellence,
+            Indus Real Estate LLC celebrating over two decades of excellence,
             Indus Real Estate LLC stands as a trusted name in Dubai’s dynamic
-            property market. With a legacy spanning 21 years and over 160
+            property market. With a legacy spanning 20 years and over 160
             prestigious awards, we continue to redefine standards in real estate
             consultancy, brokerage, and investment services.
           </p>
+          <br>
           <p>
             Driven by integrity, innovation, and an unwavering commitment to
             client success, we offer tailored solutions that transform
@@ -42,6 +43,7 @@
             investments, our expertise ensures every client experiences seamless
             service and exceptional results.
           </p>
+          <br>
           <p>
             Indus Real Estate LLC — where excellence meets experience, and every
             success story begins with trust.
