Changes done in the content mentioned by Owais

--- a/index.html
+++ b/index.html
@@ -158,6 +158,23 @@
       <div class="hiring-section" onclick="openLinkedInPost()">
         <div class="linkedin-container">
           <img
+            src="images/21_Anniversary.jpg"
+            alt="We're Hiring - Indus Real Estate"
+            class="linkedin-post"
+          />
+          <div class="linkedin-logo">
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="hiring-overlay">
+          <div class="hiring-subtitle">Click to view our LinkedIn post</div>
+        </div>
+      </div>
+
+      <!-- Hiring Section - LinkedIn Post 2 -->
+      <div class="hiring-section" onclick="openLinkedInPost2()">
+        <div class="linkedin-container">
+          <img
             src="images/linkedin_post.jpeg"
             alt="We're Hiring - Indus Real Estate"
             class="linkedin-post"
