--- a/index.html
+++ b/index.html
@@ -154,39 +154,46 @@
         </div>
       </div>
 
-      <!-- Hiring Section - LinkedIn Post -->
-      <div class="hiring-section" onclick="openLinkedInPost()">
-        <div class="linkedin-container">
-          <img
-            src="images/21_Anniversary.jpg"
-            alt="We're Hiring - Indus Real Estate"
-            class="linkedin-post"
-          />
-          <div class="linkedin-logo">
-            <i class="fab fa-linkedin"></i>
-          </div>
-        </div>
-        <div class="hiring-overlay">
-          <div class="hiring-subtitle">Click to view our LinkedIn post</div>
-        </div>
-      </div>
+  <div class="container">
+        <h1 class="section-title">Our <span>LinkedIn</span></h1>
+        
+        <div class="hiring-container">
+            <!-- Hiring Section - LinkedIn Post 1 -->
+            <div class="hiring-section" onclick="openLinkedInPost()">
+                <div class="linkedin-container">
+                    <img
+                        src="images/Anniversary 500x300.jpg"
+                        alt="We're Hiring - Indus Real Estate"
+                        class="linkedin-post"
+                    />
+                    <div class="linkedin-logo">
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="hiring-overlay">
+                    <div class="hiring-subtitle">Click to view our LinkedIn post</div>
+                </div>
+            </div>
 
-      <!-- Hiring Section - LinkedIn Post 2 -->
-      <div class="hiring-section" onclick="openLinkedInPost2()">
-        <div class="linkedin-container">
-          <img
-            src="images/linkedin_post.jpeg"
-            alt="We're Hiring - Indus Real Estate"
-            class="linkedin-post"
-          />
-          <div class="linkedin-logo">
-            <i class="fab fa-linkedin"></i>
-          </div>
+            <!-- Hiring Section - LinkedIn Post 2 -->
+            <div class="hiring-section" onclick="openLinkedInPost2()">
+                <div class="linkedin-container">
+                    <img
+                        src="images/Diwali 500x300.jpg"
+                        alt="We're Hiring - Indus Real Estate"
+                        class="linkedin-post"
+                    />
+                    <div class="linkedin-logo">
+                        <i class="fab fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="hiring-overlay">
+                    <div class="hiring-subtitle">Click to view our LinkedIn post</div>
+                </div>
+            </div>
         </div>
-        <div class="hiring-overlay">
-          <div class="hiring-subtitle">Click to view our LinkedIn post</div>
-        </div>
-      </div>
+    </div>
+      
 
       <!-- Additional Text Section -->
       <!-- <div class="text-content">
